fixed the mobile nav aligning

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@
   --btn-container-h-sm: clamp(2.5rem, 12vw + 1rem, 3.2rem);
 }
 
+
 /* NAVBAR */
 .navbar {
   padding: 50px 0;
@@ -64,6 +65,7 @@
   position: absolute;
   top: 40px;
   left: 1.5%;
+  padding-top: 5px;
 }
 
 
@@ -191,7 +193,7 @@
 .list-container {
   display: flex;
   flex-direction: column;
-  padding-top: 150px;
+  padding: 150px 0;
   justify-content: center;
   align-items: center;
 }
